--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 .lightpurple{
-    color: #dcb0ee;
+    color: #a877c8;
 }
 
 .jewel{
-    color: #a3bbf0
+    color: #a2b2df
 }
 
 .stark{
     color: #8e8484
+}
+
+.evagreen{
+    color: #b1f25c
 }
 
 .command{
@@ -43,35 +47,104 @@
   }
   
 
-#wrapper {
-	border: 20px solid rgb(146, 132, 132);
-	width: 950px;
-	margin: 20px;
+html {
+    font-size: 15px;
+    width: 100%
 }
 
+#wrapper{
+    margin: 20px;
+    width: 950px;
+}
 body {
     background: #0E0B16;
     color: #E7DFDD;
-    font-size: 18px;
+    font-size: 100%;
     font-family: 'Roboto Mono', monospace;
     margin: 30px;
     overflow-x: hidden;
+    position: absolute;
+    width: inherit;
+    padding-bottom: 40px
 }
 
 pre {
-    color: rgb(222, 200, 121)
+    color: #f7bb2a;
 }
+
+a {
+    color: #a877c8;
+    position: absolute;
+    
+}
+
+a:hover{
+    background-color:rgb(89, 179, 89);
+    color: #0E0B16;
+
+}
+
 input {
+    display: inline;
+    position: absolute;
     outline: none;
+    overflow: hidden;
     border: none;
     resize: none;
     background: #0E0B16;
-    color: #B1D8B7;
+    color: #b1f25c;
     font-family: 'Roboto Mono', monospace;
-    font-size: 18px;
+    font-size: 100%;
     padding-left: 0px;
-    width: 85%;
-
+    width: 80%;
     caret-color: #E7DFDD
 }
 
+@media (max-width: 40em){
+    
+    html {
+        font-size: 20px;
+        width: 100%
+    }
+    body {
+        background: blue;
+        color: #E7DFDD;
+        font-size: 100%;
+        font-family: 'Roboto Mono', monospace;
+        overflow-x: hidden;
+        position: absolute;
+    }
+
+    pre {
+        color: #f7bb2a;
+    }
+
+    a {
+        font: 100%
+        color: #a877c8;
+        position: absolute;
+        
+    }
+
+    a:hover{
+        background-color:rgb(89, 179, 89);
+        color: #0E0B16;
+
+    }
+
+    input {
+        display: inline;
+        position: absolute;
+        outline: none;
+        overflow: hidden;
+        border: none;
+        resize: none;
+        background: #0E0B16;
+        color: #b1f25c;
+        font-family: 'Roboto Mono', monospace;
+        font-size: 100%;
+        padding-left: 0px;
+        width: 80%;
+        caret-color: #E7DFDD
+    }
+}
