--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@300&display=swap');
+
+:root {
+  font-family: 'IBM Plex Mono', monospace;
+}
+
 html,
 body {
   height: 100%;
