--- a/src/css/style.css
+++ b/src/css/style.css
@@ -167,3 +167,35 @@ a:hover {
   color: #FF9951;
   font-weight: 400;
 }
+
+@media (max-width: 600px) {
+  body {
+    font-size: 10px;
+    padding: 2px;
+    font-weight: 300;
+  }
+
+  input {
+    font-size: 10px;
+  }
+
+  p {
+    line-height: 14px;
+  }
+
+  pre {
+    line-height: 10px !important;
+  }
+
+  main {
+    border-width: 1px;
+  }
+
+  #terminal {
+    margin-left: 8px;
+  }
+
+  #input-line {
+    margin-left: 8px;
+  }
+}
