--- a/src/css/style.css
+++ b/src/css/style.css
@@ -47,7 +47,6 @@ main {
   border-radius: 2px;
   overflow-y: auto;
   overflow-x: hidden;
-  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
   scrollbar-width: none;
   -ms-overflow-style: none;
 }
@@ -68,16 +67,21 @@ div {
   line-height: 22px;
 }
 
+@font-face {
+  font-family: ascii;
+  src: url("./font/IBMPlexMono-Thin.ttf")
+}
+
 pre {
   margin: 0;
-  line-height: 15px !important;
+  padding: 0;
+  line-height: 20px !important;
   color: #FF9951;
-  font-family: monospace;
+  font-family: "ascii", monospace;
 }
 
 input {
   font-family: 'IBM Plex Mono', monospace;
-  background-color: var(--bg);
   padding: 0px;
   margin: 0px;
   border: none;
@@ -160,7 +164,6 @@ a:hover {
 
 .output {
   font-weight: 400 !important;
-  color: #FF7685;
 }
 
 .keys {
@@ -184,7 +187,8 @@ a:hover {
   }
 
   pre {
-    line-height: 10px !important;
+    line-height: 12px !important;
+    font-size: 9px;
   }
 
   main {
